--- a/css/styles.css
+++ b/css/styles.css
@@ -65,11 +65,11 @@ body {
   height: inherit;
   padding-left: 0;
   padding-right: 0;
-  background: linear-gradient(to bottom right, rgba(215,176,41,0) 0%, rgba(215,176,41,0) 50%, rgba(215,176,41,0.8) 50%, rgba(215,176,41,0.8) 100%);;
+  background: linear-gradient(to bottom right, rgba(215,176,41,0) 0%, rgba(215,176,41,0) 50%, rgba(215,176,41,0.8) 50%, rgba(215,176,41,0.8) 100%);
 }
 
 .hero-text {
-  padding: 2.5rem;
+  padding-right: 1.25rem;
   margin-top: 37.5rem;
 }
 
@@ -181,7 +181,32 @@ body {
 }
 
 .card {
-  height: 25rem;
+  padding:0;
+  height: 20rem;
+  text-align: center;
+  border: 0;
+  background: #fdfdfd;
+  box-shadow: 5px 5px 5px grey;
+}
+
+.thing-1 {
+  border-top-right-radius: 25%;
+  margin-bottom: 18.75rem;
+}
+
+.thing-2 {
+  border-top-left-radius: 25%;
+  margin-top: 20.75rem;
+}
+
+.thing-3 {
+  border-bottom-right-radius: 25%;
+  margin-top: 42rem;
+}
+
+
+.card-img-top {
+  width: inherit;
 }
 
 
